# NightFlow

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  splashscreen.html  vite.config.js
.github/workflows/: ci.yml  pages.yml  release.yml  update-homebrew.yml
Casks/: nightflow.rb
HomebrewFormula/: nightflow.rb
docs/: architecture.html  contributing.html  documentation.html  getting-started.html  index.html  robots.txt  sitemap.xml
public/netron/: mlir.js
src/: app.jsx  main.jsx  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: env.rs  fs.rs  interpretation.rs  main.rs  pty.rs  runs.rs  ssh.rs  system.rs  training.rs
src/components/: AboutModal.jsx  BarChart.jsx  ChartPanel.jsx  ConfusionMatrix.jsx  CreateProjectWizard.jsx  DeleteProjectDialog.jsx  EmptyProjectsScreen.jsx  ExportDropdown.jsx  Header.jsx  InferenceTab.jsx  KeyboardShortcutsModal.jsx  LineChart.jsx  PerClassMetrics.jsx  RunsTable.jsx  Sidebar.jsx  Sparkline.jsx  StatusBadge.jsx  SummaryCard.jsx  SyncLogsPanel.jsx  SystemMetricsPanel.jsx  TrainingPanel.jsx  TutorialOverlay.jsx
src/data/: mock.js
src/db/: database.js  utils.js
src/hooks/: useTerminal.js
src/state/: dashboard.js  experiments.js  interpretation.js  projects.js  queue.js  router.js  theme.js  training.js  tutorial.js  update.js
src/utils/: configBuilder.js  exportRuns.js  notifications.js
src/views/: ChartsView.jsx  CompareRunsView.jsx  DashboardView.jsx  (+7 more)
