[package]
name = "nightforge"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
hostname = "0.4.2"
tokio = { version = "1", features = ["process", "time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
