[package]
name = "nightflow"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.9.0"
hostname = "0.4.2"
tokio = { version = "1", features = ["process", "time", "io-util"] }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
